Fixed office-bearer layout. For floated elements to break into rows smoothly, you need a consistent height.

--- a/css/style.css
+++ b/css/style.css
@@ -483,5 +483,6 @@ h2.slide-btm-text{
 /* Don't override, specify */
 .officer {
     text-align: center;
-    padding: 0 0 50px 0;
+    float: left;
+    height: 16em;
 }
